@@ -309,7 +309,7 @@ class IRCWorld < OSX::NSObject
   
   # delegate
   
-  objc_method :outlineView_shouldEditTableColumn_item, 'i@:@@@'
+  objc_method :outlineView_shouldEditTableColumn_item, 'c@:@@@'
   def outlineView_shouldEditTableColumn_item(sender, column, item)
     false
   end
@@ -356,7 +356,7 @@ class IRCWorld < OSX::NSObject
     item.number_of_children
   end
   
-  objc_method :outlineView_isItemExpandable, 'i@:@@'
+  objc_method :outlineView_isItemExpandable, 'c@:@@'
   def outlineView_isItemExpandable(sender, item)
     item.number_of_children > 0
   end
